--- a/style.css
+++ b/style.css
@@ -2,4 +2,14 @@
     height: 400px; /* adjust the height as needed */
     object-fit: cover;
   }
+
+  .card {
+    height: 100%;
+  }
   
+  .card-img-top {
+    height: 100%;
+    object-fit: cover;
+  }
+  
+
