--- a/style.css
+++ b/style.css
@@ -1,15 +1,56 @@
-.carousel-item img {
-    height: 400px; /* adjust the height as needed */
-    object-fit: cover;
-  }
-
-  .card {
-    height: 100%;
+/* nav */
+body {
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
   }
   
-  .card-img-top {
-    height: 100%;
-    object-fit: cover;
+  .topnav {
+    overflow: hidden;
+    background-color: #333;
   }
   
-
+  .topnav a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  .topnav a.active {
+    background-color: #04AA6D;
+    color: white;
+  }
+  
+  .topnav .icon {
+    display: none;
+  }
+  
+  @media screen and (max-width: 600px) {
+    .topnav a:not(:first-child) {display: none;}
+    .topnav a.icon {
+      float: right;
+      display: block;
+    }
+  }
+  
+  @media screen and (max-width: 600px) {
+    .topnav.responsive {position: relative;}
+    .topnav.responsive .icon {
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
+    .topnav.responsive a {
+      float: none;
+      display: block;
+      text-align: left;
+    }
+  }
