--- a/style.css
+++ b/style.css
@@ -56,4 +56,28 @@ body {
   }
 
   /* header */
- 
+  .header {
+			position: relative;
+			width: 100%;
+			height: auto;
+			margin: 0;
+			padding: 0;
+			overflow: hidden;
+		}
+		.header img {
+			width: 100%;
+			height: auto;
+			object-fit: cover;
+			object-position: center;
+		}
+		.header .text {
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			transform: translate(-50%, -50%);
+			color: #fff;
+			font-size: 48px;
+			font-weight: bold;
+			text-align: center;
+			text-shadow: 2px 2px #000;
+		}
