--- a/style.css
+++ b/style.css
@@ -6,13 +6,13 @@ body {
   
   .topnav {
     overflow: hidden;
-    background-color: #333;
+    background-color: rgb(255, 255, 255);
   }
   
   .topnav a {
     float: left;
     display: block;
-    color: #f2f2f2;
+    color: #000000;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -21,11 +21,11 @@ body {
   
   .topnav a:hover {
     background-color: #ddd;
-    color: black;
+    color: rgb(0, 0, 0); 
   }
   
   .topnav a.active {
-    background-color: #04AA6D;
+    background-color: rgb(7%, 13%, 58%);
     color: white;
   }
   
