almost done homepage

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
+    background-color: rgb(227, 213, 232);
   }
   
   .topnav {
@@ -81,3 +82,75 @@ body {
 			text-align: center;
 			text-shadow: 2px 2px #000;
 		}
+
+/* about */
+#about {
+    background-color: #f5f5f5;
+    padding: 40px;
+    text-align: center;
+  }
+  
+  #about h2 {
+    font-size: 36px;
+    color: #333;
+    margin-bottom: 20px;
+  }
+  
+  #about p {
+    font-size: 18px;
+    line-height: 1.5;
+    color: #666;
+    margin-bottom: 10px;
+  }
+  
+  #about img {
+    max-width: 100%;
+    margin-bottom: 10px;
+  }
+
+
+  /* gallery */
+
+  .gallery {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-gap: 10px;
+    margin-inline: 20px;
+
+  }
+  
+  .gallery-item {
+    position: relative;
+    overflow: hidden;
+  }
+  
+  .gallery-item img {
+    display: block;
+    width: 100%;
+    height: auto;
+    transition: transform 0.3s ease-in-out;
+  }
+  
+  .gallery-item:hover img {
+    transform: scale(1.1);
+  }
+
+  .title{
+    text-align: center;
+  }
+
+  .center {
+    text-align: center;
+    margin-top: 14px;
+  }
+
+
+  /* footer */
+  footer {
+    background-color: #f2f2f2;
+    padding: 20px;
+    text-align: center;
+  }
+  
+  
+  
