--- a/style.css
+++ b/style.css
@@ -154,4 +154,59 @@ body {
   }
   
   
+
+  /* portfolio */
+  main {
+	max-width: 800px;
+	margin: 0 auto;
+	padding: 20px;
+}
+
+.gallery2 {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	margin-bottom: 20px;
+}
+
+.gallery2 .thumbnail {
+	flex-basis: 32%;
+	margin-bottom: 20px;
+}
+
+.gallery2 .thumbnail img {
+	width: 100%;
+	cursor: pointer;
+}
+
+.modal {
+	display: none;
+	position: fixed;
+	z-index: 1;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	overflow: auto;
+	background-color: rgba(0, 0, 0, 0.9);
+}
+
+.modal-content {
+	margin: auto;
+	display: block;
+	width: 80%;
+	max-width: 800px;
+	max-height: 80%;
+	position: relative;
+}
+
+.close {
+	position: absolute;
+	top: 0;
+	right: 20px;
+	font-size: 28px;
+	font-weight: bold;
+	color: #fff;
+	cursor: pointer;
+}
   
