--- a/style.css
+++ b/style.css
@@ -156,57 +156,64 @@ body {
   
 
   /* portfolio */
-  main {
-	max-width: 800px;
-	margin: 0 auto;
-	padding: 20px;
+
+
+  .gallery2 {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .thumbnail {
+    height: 250px;
+    width: 250px;
+    margin: 10px;
+    /* float: left; */
+    cursor: pointer;
 }
 
-.gallery2 {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
-	margin-bottom: 20px;
+/* Styles for the enlarged image */
+.enlarged {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0,0,0,0.7);
+    display: none;
+    align-items: center;
+    justify-content: center;
 }
 
-.gallery2 .thumbnail {
-	flex-basis: 32%;
-	margin-bottom: 20px;
+/* Styles for the enlarged image's inner container */
+.enlarged .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    height: 80%;
+    width: 80%;
 }
 
-.gallery2 .thumbnail img {
-	width: 100%;
-	cursor: pointer;
+/* Styles for the enlarged image */
+.enlarged img {
+    max-height: 100%;
+    max-width: 100%;
+    border: 5px solid #fff;
+    box-shadow: 0 0 5px #000;
+    margin: 0 auto;
+    display: block;
 }
 
-.modal {
-	display: none;
-	position: fixed;
-	z-index: 1;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	overflow: auto;
-	background-color: rgba(0, 0, 0, 0.9);
-}
-
-.modal-content {
-	margin: auto;
-	display: block;
-	width: 80%;
-	max-width: 800px;
-	max-height: 80%;
-	position: relative;
-}
-
+/* Styles for the close button */
 .close {
-	position: absolute;
-	top: 0;
-	right: 20px;
-	font-size: 28px;
-	font-weight: bold;
-	color: #fff;
-	cursor: pointer;
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    cursor: pointer;
+    color: #fff;
+    font-size: 20px;
+    font-weight: bold;
 }
-  
