--- a/style.css
+++ b/style.css
@@ -2,18 +2,17 @@
 body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
-    background-color: rgb(227, 213, 232);
   }
   
   .topnav {
     overflow: hidden;
-    background-color: rgb(255, 255, 255);
+    background-color: #333;
   }
   
   .topnav a {
     float: left;
     display: block;
-    color: #000000;
+    color: #f2f2f2;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -22,11 +21,11 @@ body {
   
   .topnav a:hover {
     background-color: #ddd;
-    color: rgb(0, 0, 0); 
+    color: black;
   }
   
   .topnav a.active {
-    background-color: rgb(7%, 13%, 58%);
+    background-color: #04AA6D;
     color: white;
   }
   
