--- a/style.css
+++ b/style.css
@@ -2,17 +2,18 @@
 body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
+    background-color: rgb(255, 255, 255);
   }
   
   .topnav {
     overflow: hidden;
-    background-color: #333;
+    background-color: rgb(255, 255, 255);
   }
   
   .topnav a {
     float: left;
     display: block;
-    color: #f2f2f2;
+    color: #000000;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -21,11 +22,11 @@ body {
   
   .topnav a:hover {
     background-color: #ddd;
-    color: black;
+    color: rgb(0, 0, 0); 
   }
   
   .topnav a.active {
-    background-color: #04AA6D;
+    background-color: rgb(7%, 13%, 58%);
     color: white;
   }
   
@@ -55,7 +56,7 @@ body {
     }
   }
 
-  header
+  /* header */
   .header {
 			position: relative;
 			width: 100%;
@@ -147,9 +148,19 @@ body {
 
   /* footer */
   footer {
-    background-color: #f2f2f2;
-    padding: 20px;
-    text-align: center;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    background-color: #333;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  footer p {
+    margin: 0;
   }
   
   
@@ -165,6 +176,7 @@ body {
   }
 
   .thumbnail {
+    text-align: center;
     height: 250px;
     width: 250px;
     margin: 10px;
@@ -216,3 +228,81 @@ body {
     font-size: 20px;
     font-weight: bold;
 }
+
+/* about us */
+.about-us {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 50px;
+    background-color: #fff;
+  }
+  
+  .about-image {
+    flex: 1;
+    margin-right: 50px;
+  }
+  
+  .about-image img {
+    width: 100%;
+  }
+  
+  .about-content {
+    flex: 2;
+  }
+  
+  .about-content h1 {
+    font-size: 36px;
+    margin-bottom: 20px;
+  }
+  
+  .about-content p {
+    font-size: 18px;
+    line-height: 1.5;
+    margin-bottom: 20px;
+  }
+  
+
+
+  /* social-media */
+
+  .social-media {
+    background-color: #f5f5f5;
+    padding: 20px;
+    margin-bottom: 80px;
+  }
+  
+  .social-media-header {
+    text-align: center;
+  }
+  
+  .social-media-header h3 {
+    font-size: 1.5rem;
+    margin: 0;
+  }
+  
+  .social-media-icons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+  }
+  
+  .social-media-icon {
+    background-color: #fff;
+    border-radius: 50%;
+    box-shadow: 0 2px 4px rgba(0,0,0,.1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
+    width: 50px;
+    margin: 0 10px;
+    text-decoration: none;
+    transition: all .2s ease-in-out;
+  }
+  
+  .social-media-icon:hover {
+    transform: scale(1.1);
+  }
+  
