--- a/style.css
+++ b/style.css
@@ -173,6 +173,7 @@ body {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    margin-bottom: 50px;
   }
 
   .thumbnail {
